--- a/EjemplosWin/EjemplosWin.csproj
+++ b/EjemplosWin/EjemplosWin.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Datos.cs" />
+    <Compile Include="dtoProducto.cs" />
     <Compile Include="Extenciones.cs" />
     <Compile Include="frmExtenciones.cs">
       <SubType>Form</SubType>
@@ -60,6 +61,12 @@
     <Compile Include="frmMenu.Designer.cs">
       <DependentUpon>frmMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmQueries1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmQueries1.Designer.cs">
+      <DependentUpon>frmQueries1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Producto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -68,6 +75,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMenu.resx">
       <DependentUpon>frmMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmQueries1.resx">
+      <DependentUpon>frmQueries1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
