--- a/EjemplosWin/EjemplosWin.csproj
+++ b/EjemplosWin/EjemplosWin.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Datos.cs" />
+    <Compile Include="BdSolicitudes.cs" />
     <Compile Include="dtoProducto.cs" />
     <Compile Include="Extenciones.cs" />
     <Compile Include="frmExtenciones.cs">
@@ -73,6 +74,12 @@
     <Compile Include="frmQueries2.Designer.cs">
       <DependentUpon>frmQueries2.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmQueries3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmQueries3.Designer.cs">
+      <DependentUpon>frmQueries3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Producto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -87,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmQueries2.resx">
       <DependentUpon>frmQueries2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmQueries3.resx">
+      <DependentUpon>frmQueries3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
