Capitulo 6 listo, desarrollando capitulo 7

--- a/EjemplosWin/EjemplosWin.csproj
+++ b/EjemplosWin/EjemplosWin.csproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Clientes.xml" />
+    <Content Include="ventas.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
