--- a/EjemplosWeb/EjemplosWeb.csproj
+++ b/EjemplosWeb/EjemplosWeb.csproj
@@ -71,6 +71,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BdSolicitudes.cs" />
     <Compile Include="Consultas.aspx.cs">
       <DependentUpon>Consultas.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
