--- a/EjemplosWeb/EjemplosWeb.csproj
+++ b/EjemplosWeb/EjemplosWeb.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Consultas.aspx" />
+    <Content Include="Elementos.aspx" />
     <Content Include="Estatus.xml" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -79,6 +80,13 @@
     </Compile>
     <Compile Include="Consultas.aspx.designer.cs">
       <DependentUpon>Consultas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Elementos.aspx.cs">
+      <DependentUpon>Elementos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Elementos.aspx.designer.cs">
+      <DependentUpon>Elementos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
